amend css class to fix table misalignment

--- a/src/work-allocation/components/task-field/task-field.component.scss
+++ b/src/work-allocation/components/task-field/task-field.component.scss
@@ -22,3 +22,7 @@
   display: -webkit-inline-box;
   max-width: 200px !important;
 }
+
+.cdk-column-priority {
+  width: 73px !important;
+}
